--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="de">
     <head>
         <meta charset="UTF-8">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="index.css">
         <title>Funzel PoC</title>
     </head>
