--- a/index.html
+++ b/index.html
@@ -7,7 +7,83 @@
         <title>Funzel PoC</title>
     </head>
     <body>
-        <div id="poc"></div>
-        <script src="index.js"></script>
+        <div id="poc">
+            <div id="slides">
+                <div class="slide" id="slide-logo">
+                    <img alt="" src="data/static/Funzel_Logo.jpg">
+                </div>
+                <div class="slide" id="slide-1">
+                    <img alt="Seite 1" src="data/static/1.jpeg">
+                </div>
+                <div class="slide" id="slide-2">
+                    <img alt="Seite 2" src="data/static/2.jpeg">
+                </div>
+                <div class="slide" id="slide-3">
+                    <img alt="Seite 3" src="data/static/3.jpeg">
+                </div>
+                <div class="slide" id="slide-4">
+                    <img alt="Seite 4" src="data/static/4.jpeg">
+                </div>
+                <div class="slide" id="slide-5">
+                    <img alt="Seite 5" src="data/static/5.jpeg">
+                </div>
+                <div class="slide" id="slide-6">
+                    <img alt="Seite 6" src="data/static/6.jpeg">
+                </div>
+                <div class="slide" id="slide-7">
+                    <img alt="Seite 7" src="data/static/7.jpeg">
+                </div>
+                <div class="slide" id="slide-8">
+                    <img alt="Seite 8" src="data/static/8.jpeg">
+                </div>
+                <div class="slide" id="slide-9">
+                    <img alt="Seite 9" src="data/static/9.jpeg">
+                </div>
+                <div class="slide" id="slide-10">
+                    <img alt="Seite 10" src="data/static/10.jpeg">
+                </div>
+                <div class="slide" id="slide-11">
+                    <img alt="Seite 11" src="data/static/11.jpeg">
+                </div>
+                <div class="slide" id="slide-12">
+                    <img alt="Seite 12" src="data/static/12.jpeg">
+                </div>
+                <div class="slide" id="slide-13">
+                    <img alt="Seite 13" src="data/static/13.jpeg">
+                </div>
+                <div class="slide" id="slide-14">
+                    <img alt="Seite 14" src="data/static/14.jpeg">
+                </div>
+                <div class="slide" id="slide-15">
+                    <img alt="Seite 15" src="data/static/15.jpeg">
+                </div>
+                <div class="slide" id="slide-16">
+                    <img alt="Seite 16" src="data/static/16.jpeg">
+                </div>
+                <div class="slide" id="slide-17">
+                    <img alt="Seite 17" src="data/static/17.jpeg">
+                </div>
+                <div class="slide" id="slide-18">
+                    <img alt="Seite 18" src="data/static/18.jpeg">
+                </div>
+                <div class="slide" id="slide-19">
+                    <img alt="Seite 19" src="data/static/19.jpeg">
+                </div>
+                <div class="slide" id="slide-20">
+                    <img alt="Seite 20" src="data/static/20.jpeg">
+                </div>
+                <div class="slide" id="slide-21">
+                    <img alt="Seite 21" src="data/static/21.jpeg">
+                </div>
+                <div class="slide" id="slide-22">
+                    <img alt="Seite 22" src="data/static/22.jpeg">
+                </div>
+                <div class="slide" id="slide-23">
+                    <img alt="Seite 23" src="data/static/23.jpeg">
+                </div>
+            </div>
+            <div id="progress-bar"></div>
+        </div>
+        <script src="index.js" type="module"></script>
     </body>
 </html>
