--- a/index.html
+++ b/index.html
@@ -10,79 +10,91 @@
         <div id="poc">
             <div id="slides">
                 <div class="slide" id="slide-logo">
-                    <img alt="" src="data/static/Funzel_Logo.jpg">
+                    <img alt="" src="data/static/assets/Funzel_Logo.jpg">
                 </div>
                 <div class="slide" id="slide-1">
-                    <img alt="Seite 1" src="data/static/1.jpeg">
+                    <img alt="Seite 1" src="data/static/content/1.jpeg">
                 </div>
                 <div class="slide" id="slide-2">
-                    <img alt="Seite 2" src="data/static/2.jpeg">
+                    <img alt="Seite 2" src="data/static/content/2.jpeg">
                 </div>
                 <div class="slide" id="slide-3">
-                    <img alt="Seite 3" src="data/static/3.jpeg">
+                    <img alt="Seite 3" src="data/static/content/3.jpeg">
                 </div>
                 <div class="slide" id="slide-4">
-                    <img alt="Seite 4" src="data/static/4.jpeg">
+                    <img alt="Seite 4" src="data/static/content/4.jpeg">
                 </div>
                 <div class="slide" id="slide-5">
-                    <img alt="Seite 5" src="data/static/5.jpeg">
+                    <img alt="Seite 5" src="data/static/content/5.jpeg">
                 </div>
                 <div class="slide" id="slide-6">
-                    <img alt="Seite 6" src="data/static/6.jpeg">
+                    <img alt="Seite 6" src="data/static/content/6.jpeg">
                 </div>
                 <div class="slide" id="slide-7">
-                    <img alt="Seite 7" src="data/static/7.jpeg">
+                    <img alt="Seite 7" src="data/static/content/7.jpeg">
                 </div>
                 <div class="slide" id="slide-8">
-                    <img alt="Seite 8" src="data/static/8.jpeg">
+                    <img alt="Seite 8" src="data/static/content/8.jpeg">
                 </div>
                 <div class="slide" id="slide-9">
-                    <img alt="Seite 9" src="data/static/9.jpeg">
+                    <img alt="Seite 9" src="data/static/content/9.jpeg">
                 </div>
                 <div class="slide" id="slide-10">
-                    <img alt="Seite 10" src="data/static/10.jpeg">
+                    <img alt="Seite 10" src="data/static/content/10.jpeg">
                 </div>
                 <div class="slide" id="slide-11">
-                    <img alt="Seite 11" src="data/static/11.jpeg">
+                    <img alt="Seite 11" src="data/static/content/11.jpeg">
                 </div>
                 <div class="slide" id="slide-12">
-                    <img alt="Seite 12" src="data/static/12.jpeg">
+                    <img alt="Seite 12" src="data/static/content/12.jpeg">
                 </div>
                 <div class="slide" id="slide-13">
-                    <img alt="Seite 13" src="data/static/13.jpeg">
+                    <img alt="Seite 13" src="data/static/content/13.jpeg">
                 </div>
                 <div class="slide" id="slide-14">
-                    <img alt="Seite 14" src="data/static/14.jpeg">
+                    <img alt="Seite 14" src="data/static/content/14.jpeg">
                 </div>
                 <div class="slide" id="slide-15">
-                    <img alt="Seite 15" src="data/static/15.jpeg">
+                    <img alt="Seite 15" src="data/static/content/15.jpeg">
                 </div>
                 <div class="slide" id="slide-16">
-                    <img alt="Seite 16" src="data/static/16.jpeg">
+                    <img alt="Seite 16" src="data/static/content/16.jpeg">
                 </div>
                 <div class="slide" id="slide-17">
-                    <img alt="Seite 17" src="data/static/17.jpeg">
+                    <img alt="Seite 17" src="data/static/content/17.jpeg">
                 </div>
                 <div class="slide" id="slide-18">
-                    <img alt="Seite 18" src="data/static/18.jpeg">
+                    <img alt="Seite 18" src="data/static/content/18.jpeg">
                 </div>
                 <div class="slide" id="slide-19">
-                    <img alt="Seite 19" src="data/static/19.jpeg">
+                    <img alt="Seite 19" src="data/static/content/19.jpeg">
                 </div>
                 <div class="slide" id="slide-20">
-                    <img alt="Seite 20" src="data/static/20.jpeg">
+                    <img alt="Seite 20" src="data/static/content/20.jpeg">
                 </div>
                 <div class="slide" id="slide-21">
-                    <img alt="Seite 21" src="data/static/21.jpeg">
+                    <img alt="Seite 21" src="data/static/content/21.jpeg">
                 </div>
                 <div class="slide" id="slide-22">
-                    <img alt="Seite 22" src="data/static/22.jpeg">
+                    <img alt="Seite 22" src="data/static/content/22.jpeg">
                 </div>
                 <div class="slide" id="slide-23">
-                    <img alt="Seite 23" src="data/static/23.jpeg">
+                    <img alt="Seite 23" src="data/static/content/23.jpeg">
                 </div>
             </div>
-            <div id="progress-bar"></div>
+
+            <div id="controls">
+                <button id="next-slide">
+                    <img src="data/static/assets/arrow-right.svg" width="100" height="100">
+                </button>
+                <button id="first-slide">
+                    <img src="data/static/assets/arrow-left.svg" width="100" height="100">
+                </button>
+                <button id="full-screen">
+                    <img src="data/static/assets/arrow-expand.svg" width="100" height="100">
+                </button>
+            </div>
+
         </div>
         <script src="index.js" type="module"></script>
     </body>
